@@ -46,7 +46,7 @@ byteorder::byteorder ()
 }
 
 #if !HAVE_GCC_BUILTINS
-int ctz (unsigned int x) CONST
+int rxvt_ctz (unsigned int x) CONST
 {
   int r = 0;
 
@@ -61,7 +61,7 @@ int ctz (unsigned int x) CONST
   return r;
 }
 
-int popcount (unsigned int x) CONST
+int rxvt_popcount (unsigned int x) CONST
 {
   x -=  (x >> 1) & 0x55555555;
   x  = ((x >> 2) & 0x33333333) + (x & 0x33333333);
